<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:scaleType="centerCrop"

        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="24dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
       >


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/team_a"
                android:textSize="26sp" />


            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginTop="16dp"
                android:text="@string/_0"
                android:textColor="#000000"
                android:textSize="40sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:onClick="addThreeForTeamA"
                android:text="@string/_3_points"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:onClick="addTwoForTeamA"
                android:text="@string/_2_points"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:onClick="addOneForTeamA"
                android:text="@string/free_throw"
                android:textColor="@color/black" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="320dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0"
            android:background="@color/viewbackground" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/team_b"
                android:textSize="26sp" />


            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginTop="16dp"
                android:text="@string/_0"
                android:textColor="#000000"
                android:textSize="40sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:onClick="addThreeForTeamB"
                android:text="@string/_3_points"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:onClick="addTwoForTeamB"
                android:text="@string/_2_points"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:onClick="addOneForTeamB"
                android:text="@string/free_throw"
                android:textColor="@color/black" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        android:text="Reset"
        android:onClick="resetScores"/>


</RelativeLayout>